[package]
name = "libbpf-rs-xdp-sandbox"
version = "0.1.0"
authors = ["utky <ilyaletre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.14"

[build-dependencies]
libbpf-cargo = "0.9"
